various front changes

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -243,6 +243,17 @@ section,
     text-align: center;
     padding-bottom: 60px;
     position: relative;
+ 
+
+
+  }
+  .formations {
+    
+    max-width: 100% !important ;
+    padding-top: 40px;
+    margin-bottom: 40px;
+
+
   }
   
   .section-title h2 {
@@ -979,6 +990,7 @@ section,
   
   .pricing .section-title {
     margin-bottom: 40px;
+
   }
   
   .pricing .pricing-item {
@@ -1008,7 +1020,7 @@ section,
   }
   .pricing p {
     font-size: 14px;
-    line-height: 25px;
+    line-height: 32px;
     margin-top: 40px;
   }
   
@@ -1195,7 +1207,7 @@ textarea.form {
 }
 
 .btn-submit {
-    background: #010A44;
+    background: #0940b8;
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
