--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,16 +145,16 @@ h6 {
 	margin-top: 0px;
 	font-style: normal;
 	font-weight: 500;
-	text-transform: normal
+	text-transform: bold
 }
 
 p {
-	font-family:"Arial", sans-serif;
+	font-family: "Muli", sans-serif;
 	color: #000000;
 	font-size: 19px;
 	line-height: 30px;
 	margin-bottom: 0px;
-	font-weight: normal
+	font-weight: bold
 }
 
 .bg-img-1 {
