--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -241,7 +241,7 @@ section,
   --------------------------------------------------------------*/
   .section-title {
     text-align: center;
-    padding-bottom: 60px;
+    padding-bottom: 20px;
     position: relative;
  
 
@@ -259,8 +259,7 @@ section,
   .section-title h2 {
     font-size: 32px;
     font-weight: 700;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     position: relative;
   }
   
@@ -807,7 +806,7 @@ section,
 }
 
   /*--------------------------------------------------------------
-  # Clients Section
+  # OLD Clients Section
   --------------------------------------------------------------*/
   .clients {
     padding: 40px 0; /* Increased padding for better spacing */
@@ -828,6 +827,36 @@ section,
     .clients .client-logo img {
         padding: 10px; /* Adjust padding for smaller screens */
     }
+}
+
+
+  /*--------------------------------------------------------------
+  # NEW Clients Section
+  --------------------------------------------------------------*/
+
+.clients-slider {
+  padding: 0px 0;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto !important;
+}
+
+.swiper-slide img {
+  width: 180px; /* Adjust size as needed */
+}
+
+.swiper-slide img:hover {
+  transform: scale(1);
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #0056b3; /* Arrow color */
+  padding: 20px;
 }
 
   
@@ -986,23 +1015,20 @@ section,
   --------------------------------------------------------------*/
   .pricing {
     padding: 600px 0 100px 100;
-  }
-  
-  .pricing .section-title {
-    margin-bottom: 40px;
 
   }
   
-  .pricing .pricing-item {
+ 
+  
+   .pricing-item {
     background-color:white;
     box-shadow: 0 3px 20px -2px rgba(0, 0, 0, 0.1);
-    padding: 30px 20px;
-    height: 500px;
+    padding: 20px 10px;
+    height: 450px;
     position: relative;
     border-radius: 15px;
     border: 3px solid #0940b8;
-    margin-left: -10px;
-    
+    width: 400px;
     
     
   }
